--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "formik": "^2.4.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.9.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.3",
     "yup": "^1.2.0"
